# dubito-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  insertion.py  insertion.yaml  insertions.yaml  pyproject.toml
diagrams/src/: subito.puml
extractors/: subito_detail_page_extractor.yaml  subito_list_page_extractor.yaml
src/dubito/: __main__.py  base_model.py  database.py  filters.py  models.py  subito_detail_page.py  subito_list_page.py  subito_list_page_filter.py  utils.py
src/dubito/commands/: __init__.py  analyze.py  fetch.py  find.py  generate.py  query.py
src/dubito/extractors/: subito_list_page_extractor.yaml
src/dubito/subito_list_page/: __init__.py  iterators.py
src/subito_tracker/: __main__.py  subito_detail_page.py  utils.py
src/subito_tracker/subito_list_page/: __init__.py  iterators.py
tests/: test_subito_tracker.py
tests/data/: test_subito_detail_page.html  test_subito_list_page.html
uc/: .gitignore
uc/0-2_iphone_price_prediction/: fetch.sh  query.sh  uc.ipynb
uc/0_iphone_price_prediction/: find.sh
uc/1_playstation_5_resell/: find.sh  query.sh  uc.ipynb
