[project]
name = "dubito"
version = "1.0.0"
description = "Subito tracker is a tool to track the price of a product on subito.it"
readme = "README.md"
authors = [{ name = "Valerio Di Pasquale", email = "valeriodipasq@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["subito", "scraper"]
dependencies = [
    "selectorlib == 0.16.0",
    "requests",
    "requests-cache == 1.0.1",
]
requires-python = ">=3.7"

[project.scripts]
dubito = "dubito.__main__:main"
