[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dubito"
version = "1.0.0"
description = "Subito tracker is a tool to track the price of a product on subito.it"
readme = "README.md"
authors = [{ name = "Valerio Di Pasquale", email = "valeriodipasq@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["subito", "scraper", "dubito", "scraping"]
dependencies = [
    "selectorlib == 0.16.0",
    "requests",
    "requests-cache == 1.0.1",
    "pandas == 2.0.1",
    "validators == 0.20.0",
    "rich == 13.6.0",
    "seaborn == 0.13.0",
    "matplotlib == 3.8.0",
    "pony == 0.7.17",
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/daqh/dubito"

[project.scripts]
dubito = "dubito.__main__:main"
